--- a/pages/5384.html
+++ b/pages/5384.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
+<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a></strong></p>
@@ -345,7 +345,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
+<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
 </li>
 
 <li>
@@ -552,29 +552,29 @@ margin-left: 0em;
 </div>
 </div>
 
-<p>Work on <math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/infinity-category'>category</a> and <math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>category</a> theory often uses the <strong>implicit <math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-category theory convention</strong>, leaving out the “<math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>” or “<math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>” symbol in notation and terminology.</p>
+<p>Work on <math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/infinity-category'>category</a> and <math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>category</a> theory often uses the <strong>implicit <math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-category theory convention</strong>, leaving out the “<math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>” or “<math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>” symbol in notation and terminology.</p>
 
 <p>In this convention</p>
 
 <ul>
 <li>
-<p><em>category</em> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a></em>, and so <math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29Cat'>(∞,1)Cat</a></em></p>
+<p><em>category</em> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a></em>, and so <math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29Cat'>(∞,1)Cat</a></em></p>
 </li>
 
 <li>
-<p><em>topos</em> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a></em>, and so <math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Topos</mi></mrow><annotation encoding='application/x-tex'>Topos</annotation></semantics></math> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29Topos'>(∞,1)Topos</a></em></p>
+<p><em>topos</em> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a></em>, and so <math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Topos</mi></mrow><annotation encoding='application/x-tex'>Topos</annotation></semantics></math> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29Topos'>(∞,1)Topos</a></em></p>
 </li>
 
 <li>
-<p><em>groupoid</em> means <em><a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoid</a></em>, and so <math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Gpd</mi></mrow><annotation encoding='application/x-tex'>Gpd</annotation></semantics></math> means <em><a class='existingWikiWord' href='/nlab/show/Infinity-Grpd'>∞Gpd</a></em></p>
+<p><em>groupoid</em> means <em><a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoid</a></em>, and so <math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Gpd</mi></mrow><annotation encoding='application/x-tex'>Gpd</annotation></semantics></math> means <em><a class='existingWikiWord' href='/nlab/show/Infinity-Grpd'>?Gpd</a></em></p>
 </li>
 
 <li>
-<p><em><math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-category</em> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category'>(∞,n)-category</a></em></p>
+<p><em><math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-category</em> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category'>(∞,n)-category</a></em></p>
 </li>
 
 <li>
-<p><em>functor</em> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a></em> or <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-functor'>(∞,n)-functor</a></em> for some <math class='maruku-mathml' display='inline' id='mathml_5a09f06fce8ceb073f808b97b66fbd565cf0d679_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math>, depending on the codomain;</p>
+<p><em>functor</em> means <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a></em> or <em><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-functor'>(∞,n)-functor</a></em> for some <math class='maruku-mathml' display='inline' id='mathml_5d2a4669cb43e6b44b4ebab929bbfb5a00a2e00b_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math>, depending on the codomain;</p>
 </li>
 
 <li>
@@ -608,18 +608,22 @@ margin-left: 0em;
  
  
  
+ 
+ 
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on January 14, 2012 10:48:43 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (71.29.67.53)
+  Revised on March  2, 2018 15:55:19 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (192.195.154.101)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/implicit+infinity-category+theory+convention" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/implicit+infinity-category+theory+convention/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/implicit+infinity-category+theory+convention" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/implicit+infinity-category+theory+convention" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/implicit+infinity-category+theory+convention" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/implicit+infinity-category+theory+convention/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/implicit+infinity-category+theory+convention" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/implicit+infinity-category+theory+convention" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
