--- a/pages/17086.html
+++ b/pages/17086.html
@@ -471,7 +471,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -923,19 +923,34 @@ margin-left: 0em;
 <p>In observational <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a>:</p>
 
 <ul>
-<li>Jonathan Pritchard, <em>Cosmological probes of inflation and the 21 cm line</em> (<a href='http://www.perimeterinstitute.ca/videos/cosmological-probes-inflation-and-21-cm-line'>video recording</a>)</li>
+<li>
+<p>Jonathan Pritchard, A. Loeb, <em>21 cm cosmology in the 21st century</em>, Rep. Prog. Phys. 75, 086901 (2012) (<a href='https://arxiv.org/abs/1109.6012'>arXiv:1109.6012</a>)</p>
+</li>
+
+<li>
+<p>Jonathan Pritchard, <em>Cosmological probes of inflation and the 21 cm line</em> (<a href='http://www.perimeterinstitute.ca/videos/cosmological-probes-inflation-and-21-cm-line'>video recording</a>)</p>
+</li>
 </ul>
+
+<p>Cosmological detection:</p>
+
+<ul>
+<li>Judd D. Bowman, Alan E. E. Rogers, Raul A. Monsalve, Thomas J. Mozdzen, Nivedita Mahesh, <em>An absorption profile centred at 78 megahertz in the sky-averaged spectrum</em>, Nature volume 555, pages 67–70 (01 March 2018) (<a href='https://www.nature.com/articles/nature25792'>doi:10.1038/nature25792</a>)</li>
+</ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on April 20, 2016 06:05:54 
+  Revised on March  3, 2018 01:47:49 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  (92.99.114.243)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/hydrogen+line" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hydrogen+line/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/hydrogen+line" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hydrogen+line" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hydrogen+line" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hydrogen+line/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/hydrogen+line" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hydrogen+line" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
