--- a/pages/19049.html
+++ b/pages/19049.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -512,7 +512,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
 </li>
 </ul>
 </div>
@@ -520,12 +520,10 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#realization_in_dependent_type_theory'>Realization in dependent type theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#realization_in_dependent_type_theory'>Realization in dependent type theory</a></li></ul></li><li><a href='#reference'>Reference</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>state monad</em> is a <a class='existingWikiWord' href='/nlab/show/monad+%28in+computer+science%29'>monad (in computer science)</a> used to implement computational storage and retreaval of data in <a class='existingWikiWord' href='/nlab/show/functional+programming'>functional programming</a>.</p>
-
-<p>A <a class='existingWikiWord' href='/nlab/show/functional+programming'>functional program</a> with input of <a class='existingWikiWord' href='/nlab/show/type'>type</a> <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, output of <a class='existingWikiWord' href='/nlab/show/type'>type</a> <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> and mutable state type <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/function'>function</a> (<a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a>) of <a class='existingWikiWord' href='/nlab/show/type'>type</a> <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>×</mo><mi>W</mi><mo>⟶</mo><mi>Y</mi><mo>×</mo><mi>W</mi></mrow><annotation encoding='application/x-tex'>X \times W \longrightarrow Y \times W</annotation></semantics></math>.</p>
+<p>The <em>store comonad</em> is a co<a class='existingWikiWord' href='/nlab/show/monad+%28in+computer+science%29'>monad (in computer science)</a> used to implement computational storage and retreaval of data in <a class='existingWikiWord' href='/nlab/show/functional+programming'>functional programming</a>.</p>
 
 <p>…</p>
 
@@ -533,22 +531,26 @@ margin-left: 0em;
 
 <h3 id='realization_in_dependent_type_theory'>Realization in dependent type theory</h3>
 
-<p>In a <a class='existingWikiWord' href='/nlab/show/locally+cartesian+closed+category'>locally Cartesian closed category</a>/<a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{H}</annotation></semantics></math>, then to every type <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> is associated its <a class='existingWikiWord' href='/nlab/show/base+change'>base change</a> <a class='existingWikiWord' href='/nlab/show/adjoint+triple'>adjoint triple</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mrow><mo stretchy='false'>/</mo><mi>W</mi></mrow></msub><mover><mover><munder><mo>⟶</mo><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></munder></mrow></munder><mover><mo>⟵</mo><mrow><msup><mi>W</mi> <mo>*</mo></msup></mrow></mover></mover><mover><mo>⟶</mo><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></munder></mrow></mover></mover><mstyle mathvariant='bold'><mi>H</mi></mstyle><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>In a <a class='existingWikiWord' href='/nlab/show/locally+cartesian+closed+category'>locally Cartesian closed category</a>/<a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{H}</annotation></semantics></math>, then to every type <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> is associated its <a class='existingWikiWord' href='/nlab/show/base+change'>base change</a> <a class='existingWikiWord' href='/nlab/show/adjoint+triple'>adjoint triple</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mrow><mo stretchy='false'>/</mo><mi>W</mi></mrow></msub><mover><mover><munder><mo>⟶</mo><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></munder></mrow></munder><mover><mo>⟵</mo><mrow><msup><mi>W</mi> <mo>*</mo></msup></mrow></mover></mover><mover><mo>⟶</mo><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></munder></mrow></mover></mover><mstyle mathvariant='bold'><mi>H</mi></mstyle><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \mathbf{H}_{/W}
    \stackrel{\overset{\sum_W}{\longrightarrow}}{\stackrel{\overset{W^\ast}{\longleftarrow}}{\underset{\prod_W}{\longrightarrow}}}
   \mathbf{H}
   \,.
 
 </annotation></semantics></math></div>
-<p>In terms of this the state monad is the composite</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>State</mi><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></munder><msup><mi>W</mi> <mo>*</mo></msup><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></munder><msup><mi>W</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>
-  State = \sum_W W^\ast \prod_W W^\ast 
+<p>In terms of this the store comonad is the composite</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Store</mi><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></munder><msup><mi>W</mi> <mo>*</mo></msup><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></munder><msup><mi>W</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>
+  Store = \sum_W W^\ast \prod_W W^\ast 
 
 </annotation></semantics></math></div>
 <p>of <a class='existingWikiWord' href='/nlab/show/context+extension'>context extension</a>, followed by <a class='existingWikiWord' href='/nlab/show/dependent+product'>dependent product</a> , followed by <a class='existingWikiWord' href='/nlab/show/context+extension'>context extension</a>, followed by <a class='existingWikiWord' href='/nlab/show/dependent+sum'>dependent sum</a>.</p>
 
-<p>Here <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></msub><msup><mi>W</mi> <mo>*</mo></msup><mo>=</mo><mo stretchy='false'>[</mo><mi>W</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\prod_W W^\ast = [W,-]</annotation></semantics></math> is called the <em><a class='existingWikiWord' href='/nlab/show/function+monad'>function monad</a></em> or <em><a class='existingWikiWord' href='/nlab/show/function+monad'>reader monad</a></em> and <math class='maruku-mathml' display='inline' id='mathml_be128fbda52a7addc5ee727fc18f0da7c3765198_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></msub><msup><mi>W</mi> <mo>*</mo></msup><mo>=</mo><mi>W</mi><mo>×</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\sum_W W^\ast = W \times (-)</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/writer+comonad'>writer comonad</a></em>.</p>
+<p>Here <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></msub><msup><mi>W</mi> <mo>*</mo></msup><mo>=</mo><mo stretchy='false'>[</mo><mi>W</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\prod_W W^\ast = [W,-]</annotation></semantics></math> is called the <em><a class='existingWikiWord' href='/nlab/show/function+monad'>function monad</a></em> or <em><a class='existingWikiWord' href='/nlab/show/function+monad'>reader monad</a></em> and <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></msub><msup><mi>W</mi> <mo>*</mo></msup><mo>=</mo><mi>W</mi><mo>×</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\sum_W W^\ast = W \times (-)</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/writer+comonad'>writer comonad</a></em>.</p>
+
+<h2 id='reference'>Reference</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/Bartosz+Milewski'>Bartosz Milewski</a> <a href='https://bartoszmilewski.com/2013/10/08/lenses-stores-and-yoneda/'>Lenses, Stores, and Yoneda</a></p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -575,7 +577,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on March  3, 2018 16:56:23 
+  Created on March  3, 2018 17:07:27 
   by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
   (70.74.208.137)
 </div>
