--- a/pages/19049.html
+++ b/pages/19049.html
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -512,7 +512,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
 </li>
 </ul>
 </div>
@@ -523,7 +523,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#realization_in_dependent_type_theory'>Realization in dependent type theory</a></li></ul></li><li><a href='#reference'>Reference</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>store comonad</em> is a co<a class='existingWikiWord' href='/nlab/show/monad+%28in+computer+science%29'>monad (in computer science)</a> used to implement computational storage and retreaval of data in <a class='existingWikiWord' href='/nlab/show/functional+programming'>functional programming</a>.</p>
+<p>The <em>store comonad</em> (also <em>costate comonad</em>) is a co<a class='existingWikiWord' href='/nlab/show/monad+%28in+computer+science%29'>monad (in computer science)</a> used to implement computational storage and retreaval of data in <a class='existingWikiWord' href='/nlab/show/functional+programming'>functional programming</a>.</p>
 
 <p>…</p>
 
@@ -531,8 +531,8 @@ margin-left: 0em;
 
 <h3 id='realization_in_dependent_type_theory'>Realization in dependent type theory</h3>
 
-<p>In a <a class='existingWikiWord' href='/nlab/show/locally+cartesian+closed+category'>locally Cartesian closed category</a>/<a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{H}</annotation></semantics></math>, then to every type <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> is associated its <a class='existingWikiWord' href='/nlab/show/base+change'>base change</a> <a class='existingWikiWord' href='/nlab/show/adjoint+triple'>adjoint triple</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mrow><mo stretchy='false'>/</mo><mi>W</mi></mrow></msub><mover><mover><munder><mo>⟶</mo><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></munder></mrow></munder><mover><mo>⟵</mo><mrow><msup><mi>W</mi> <mo>*</mo></msup></mrow></mover></mover><mover><mo>⟶</mo><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></munder></mrow></mover></mover><mstyle mathvariant='bold'><mi>H</mi></mstyle><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>In a <a class='existingWikiWord' href='/nlab/show/locally+cartesian+closed+category'>locally Cartesian closed category</a>/<a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> <math class='maruku-mathml' display='inline' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>H</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{H}</annotation></semantics></math>, then to every type <math class='maruku-mathml' display='inline' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> is associated its <a class='existingWikiWord' href='/nlab/show/base+change'>base change</a> <a class='existingWikiWord' href='/nlab/show/adjoint+triple'>adjoint triple</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mrow><mo stretchy='false'>/</mo><mi>W</mi></mrow></msub><mover><mover><munder><mo>⟶</mo><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></munder></mrow></munder><mover><mo>⟵</mo><mrow><msup><mi>W</mi> <mo>*</mo></msup></mrow></mover></mover><mover><mo>⟶</mo><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></munder></mrow></mover></mover><mstyle mathvariant='bold'><mi>H</mi></mstyle><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \mathbf{H}_{/W}
    \stackrel{\overset{\sum_W}{\longrightarrow}}{\stackrel{\overset{W^\ast}{\longleftarrow}}{\underset{\prod_W}{\longrightarrow}}}
   \mathbf{H}
@@ -540,13 +540,13 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>In terms of this the store comonad is the composite</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Store</mi><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></munder><msup><mi>W</mi> <mo>*</mo></msup><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></munder><msup><mi>W</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Store</mi><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></munder><msup><mi>W</mi> <mo>*</mo></msup><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></munder><msup><mi>W</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>
   Store = \sum_W W^\ast \prod_W W^\ast 
 
 </annotation></semantics></math></div>
 <p>of <a class='existingWikiWord' href='/nlab/show/context+extension'>context extension</a>, followed by <a class='existingWikiWord' href='/nlab/show/dependent+product'>dependent product</a> , followed by <a class='existingWikiWord' href='/nlab/show/context+extension'>context extension</a>, followed by <a class='existingWikiWord' href='/nlab/show/dependent+sum'>dependent sum</a>.</p>
 
-<p>Here <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></msub><msup><mi>W</mi> <mo>*</mo></msup><mo>=</mo><mo stretchy='false'>[</mo><mi>W</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\prod_W W^\ast = [W,-]</annotation></semantics></math> is called the <em><a class='existingWikiWord' href='/nlab/show/function+monad'>function monad</a></em> or <em><a class='existingWikiWord' href='/nlab/show/function+monad'>reader monad</a></em> and <math class='maruku-mathml' display='inline' id='mathml_138b03fdc57f7012290b9c5de4a2c2eec687308b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></msub><msup><mi>W</mi> <mo>*</mo></msup><mo>=</mo><mi>W</mi><mo>×</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\sum_W W^\ast = W \times (-)</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/writer+comonad'>writer comonad</a></em>.</p>
+<p>Here <math class='maruku-mathml' display='inline' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>W</mi></msub><msup><mi>W</mi> <mo>*</mo></msup><mo>=</mo><mo stretchy='false'>[</mo><mi>W</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\prod_W W^\ast = [W,-]</annotation></semantics></math> is called the <em><a class='existingWikiWord' href='/nlab/show/function+monad'>function monad</a></em> or <em><a class='existingWikiWord' href='/nlab/show/function+monad'>reader monad</a></em> and <math class='maruku-mathml' display='inline' id='mathml_8bed1360299e3c85c8ec516ed3f0fe25db1a20b6_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>W</mi></msub><msup><mi>W</mi> <mo>*</mo></msup><mo>=</mo><mi>W</mi><mo>×</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\sum_W W^\ast = W \times (-)</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/writer+comonad'>writer comonad</a></em>.</p>
 
 <h2 id='reference'>Reference</h2>
 
@@ -577,14 +577,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on March  3, 2018 17:07:27 
+  Revised on March  4, 2018 13:06:04 
   by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
   (70.74.208.137)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/store+comonad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/store+comonad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/store+comonad/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/store+comonad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/store+comonad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
