--- a/pages/8377.html
+++ b/pages/8377.html
@@ -435,10 +435,10 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_38b8ecac4da013e95d1b910d47c2ab4f38dcad74_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_5dfa0033b3e2dbbdbcb24381b445744a553255e0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -593,6 +593,8 @@ margin-left: 0em;
 
 <p>The dialect of <a class='existingWikiWord' href='/nlab/show/Martin-L%C3%B6f+dependent+type+theory'>intuitionistic type theory</a> used is also referred to as <em><a class='existingWikiWord' href='/nlab/show/computational+type+theory'>computational type theory</a></em>.</p>
 
+<p>The PRL part of the name evidently stands for Proof Refinement Logic.</p>
+
 <h2 id='references'>References</h2>
 
 <ul id='ConstableEtAl86'>
@@ -621,14 +623,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 26, 2017 11:51:59 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (107.3.133.202)
+  Revised on March  5, 2018 12:57:33 
+  by <a class="existingWikiWord" href="/nlab/show/Colin+Zwanziger">Colin Zwanziger</a>
+  (2601:547:500:4fc5:8187:e9cf:8be7:44bd)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/NuPRL" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/NuPRL/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/NuPRL" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/NuPRL" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/NuPRL" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/NuPRL/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/NuPRL" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/NuPRL" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
