--- a/pages/3132.html
+++ b/pages/3132.html
@@ -301,6 +301,9 @@ margin-left: 0em;
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
 </div>
+<div>
+   <p style="font-size: 0.85em; color:red;">Please note that the nLab and nForum will be down for planned maintenance between around 02:00 GMT and 15:00 GMT on the 11th of March. The <a href="https://groups.google.com/forum/#!forum/nlab-talk">nLab talk</a> Google Group can be used for communication during the period of downtime. Apologies for any inconvenience.</p>    
+</div>
 
 
 
@@ -326,20 +329,21 @@ margin-left: 0em;
 <li>
 <p><a href='http://www.genealogy.math.ndsu.nodak.edu/id.php?id=80837'>Mathematics genealogy project entry</a> <div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div> 
  
+ 
 </p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on March 18, 2013 11:42:24 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (95.147.236.247)
+  Revised on March  5, 2018 16:51:03 
+  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
+  (211.27.221.218)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/George+Janelidze" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/George+Janelidze/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/George+Janelidze" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/George+Janelidze" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/George+Janelidze" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/George+Janelidze/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/George+Janelidze" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/George+Janelidze" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
