--- a/pages/16302.html
+++ b/pages/16302.html
@@ -301,6 +301,9 @@ margin-left: 0em;
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
 </div>
+<div>
+   <p style="font-size: 0.85em; color:red;">Please note that the nLab and nForum will be down for planned maintenance between around 02:00 GMT and 15:00 GMT on the 11th of March. The <a href="https://groups.google.com/forum/#!forum/nlab-talk">nLab talk</a> Google Group can be used for communication during the period of downtime. Apologies for any inconvenience.</p>    
+</div>
 
 
 
@@ -323,6 +326,8 @@ margin-left: 0em;
 <p>Oxford University Press 1993</p>
 
 <p>(Proceedings of the Febr. 1991 Vancouver Conference “Logic and Cognition”), pages 43-56, 1994.</p>
+
+<p>(<a href='https://github.com/mattearnshaw/lawvere/blob/master/pdfs/1994-tools-for-the-advancement-of-objective-logic-closed-categories-and-toposes.pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -332,7 +337,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/abstract+general%2C+concrete+general+and+concrete+particular'>abstract general</a>, <a class='existingWikiWord' href='/nlab/show/abstract+general%2C+concrete+general+and+concrete+particular'>abstract particular</a>, <a class='existingWikiWord' href='/nlab/show/abstract+general%2C+concrete+general+and+concrete+particular'>concrete particular</a> by categorical <a class='existingWikiWord' href='/nlab/show/theory'>theories</a> (<a class='existingWikiWord' href='/nlab/show/Lawvere+theory'>Lawvere theories</a>) and their <a class='existingWikiWord' href='/nlab/show/model'>models</a>;</p>
+<p><a class='existingWikiWord' href='/nlab/show/abstract+general%2C+concrete+general+and+concrete+particular'>abstract general</a>, <a class='existingWikiWord' href='/nlab/show/abstract+general%2C+concrete+general+and+concrete+particular'>concrete general</a> and <a class='existingWikiWord' href='/nlab/show/abstract+general%2C+concrete+general+and+concrete+particular'>particular</a> by categorical <a class='existingWikiWord' href='/nlab/show/theory'>theories</a> (<a class='existingWikiWord' href='/nlab/show/Lawvere+theory'>Lawvere theories</a>) and their <a class='existingWikiWord' href='/nlab/show/model'>models</a>;</p>
 </li>
 
 <li>
@@ -346,14 +351,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 27, 2015 12:44:40 
+  Revised on March  6, 2018 01:16:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Tools+for+the+advancement+of+objective+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tools+for+the+advancement+of+objective+logic/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Tools+for+the+advancement+of+objective+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tools+for+the+advancement+of+objective+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Tools+for+the+advancement+of+objective+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tools+for+the+advancement+of+objective+logic/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Tools+for+the+advancement+of+objective+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tools+for+the+advancement+of+objective+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
