--- a/pages/5878.html
+++ b/pages/5878.html
@@ -301,6 +301,9 @@ margin-left: 0em;
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
 </div>
+<div>
+   <p style="font-size: 0.85em; color:red;">Please note that the nLab and nForum will be down for planned maintenance between around 02:00 GMT and 15:00 GMT on the 11th of March. The <a href="https://groups.google.com/forum/#!forum/nlab-talk">nLab talk</a> Google Group can be used for communication during the period of downtime. Apologies for any inconvenience.</p>    
+</div>
 
 
 
@@ -732,6 +735,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p>in <a class='existingWikiWord' href='/nlab/show/D%3D10+super+Yang-Mills+theory'>10d super Yang-Mills theory</a>: see <a href='D%3D10+super+Yang-Mills+theory#EquationsOfMotionFromTheBianchiIdentity'>there</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/sfermion'>sfermions</a></p>
 
 <ul>
@@ -773,14 +780,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 22, 2018 04:34:51 
+  Revised on March  6, 2018 11:15:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.202)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gaugino" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gaugino/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/gaugino" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gaugino" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gaugino" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gaugino/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/gaugino" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gaugino" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
