--- a/pages/16302.html
+++ b/pages/16302.html
@@ -347,18 +347,28 @@ margin-left: 0em;
 
 <p>Various related suggestions are implicit in other texts by Lawvere, see at <em><a href='William+Lawvere#RelationToPhilosophy'>William Lawvere – Mathematics related to philosophy</a></em></p>
 
+<h3 id='contents'>Contents</h3>
+
+<h4 id='1_categorical_refinement_of_a_hegelian_principle'>1. Categorical Refinement of a Hegelian Principle</h4>
+
+<h4 id='2_deepening_metrics_unity_and_identity_of_adjoint_opposites'>2. Deepening, Metrics, Unity and Identity of Adjoint Opposites</h4>
+
+<h4 id='3_realization_of_plans'>3. Realization of Plans</h4>
+
+<h4 id='4_detailed_models_of_becoming'>4. Detailed Models of Becoming</h4>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on March  6, 2018 01:16:27 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  Revised on March  6, 2018 12:30:31 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Tools+for+the+advancement+of+objective+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tools+for+the+advancement+of+objective+logic/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Tools+for+the+advancement+of+objective+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tools+for+the+advancement+of+objective+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Tools+for+the+advancement+of+objective+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tools+for+the+advancement+of+objective+logic/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Tools+for+the+advancement+of+objective+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tools+for+the+advancement+of+objective+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
